@@ -1,0 +1,6 @@
+Jigsaw Download, or short jigdo, is a tool designed to ease the
+distribution of very large files over the internet, for example CD or
+DVD images.  Its aim is to make downloading the images as easy for
+users as a click on a direct download link in a browser, while
+avoiding all the problems that server administrators have with hosting
+such large files.
