@@ -1,0 +1,24 @@
+# $NetBSD: Makefile,v 1.1.1.1 2004/02/26 22:55:18 agc Exp $
+
+DISTNAME=		jigdo-0.7.0
+CATEGORIES=		net
+MASTER_SITES=		http://atterer.net/jigdo/
+EXTRACT_SUFX=		.tar.bz2
+
+MAINTAINER=		tech-pkg@NetBSD.org
+HOMEPAGE=		http://atterer.net/jigdo/
+COMMENT=		Tool to ease downloading of large files from the Internet
+
+CONFIGURE_ARGS+=	--without-libdb
+GNU_CONFIGURE=		yes
+USE_BUILDLINK3=		yes
+USE_GNU_TOOLS+=		gmake
+USE_LANGUAGES=		c c++
+
+#.include "../../databases/db3/buildlink3.mk"
+.include "../../devel/gettext-lib/buildlink3.mk"
+.include "../../devel/pkgconfig/buildlink3.mk"
+.include "../../www/libwww/buildlink3.mk"
+.include "../../x11/gtk2/buildlink3.mk"
+
+.include "../../mk/bsd.pkg.mk"
