@@ -1,0 +1,21 @@
+@comment $NetBSD: PLIST,v 1.1.1.1 2004/02/26 22:55:18 agc Exp $
+bin/jigdo
+bin/jigdo-file
+bin/jigdo-lite
+bin/jigdo-mirror
+man/man1/jigdo-file.1
+man/man1/jigdo-lite.1
+man/man1/jigdo-mirror.1
+man/man1/jigdo.1
+share/jigdo/COPYING
+share/jigdo/debian-mirrors.jigdo
+share/jigdo/pixmaps/close.png
+share/jigdo/pixmaps/jigdo-logo.png
+share/jigdo/pixmaps/pause.png
+share/jigdo/pixmaps/progress-green.png
+share/jigdo/pixmaps/restart.png
+share/jigdo/pixmaps/start.png
+share/jigdo/pixmaps/stop.png
+${PKGLOCALEDIR}/locale/de/LC_MESSAGES/jigdo.mo
+@dirrm share/jigdo/pixmaps
+@dirrm share/jigdo
