@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2004/02/26 22:55:18 agc Exp $
+
+SHA1 (jigdo-0.7.0.tar.bz2) = 9c4d4ae384e25e3001912b2030941bc3d8b3e036
+Size (jigdo-0.7.0.tar.bz2) = 530737 bytes
