@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5011 2004/02/26 22:55:01 minskim Exp $
+$NetBSD: CHANGES,v 1.5012 2004/02/26 22:56:56 agc Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1062,3 +1062,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated at-spi to 1.3.13 [jmmv 2004-02-26]
 	Updated gnome-mag to 0.10.7 [jmmv 2004-02-26]
 	Added py-IndexedCatalog-0.6.0 [minskim 2004-02-26]
+	Added jigdo-0.7.0 [agc 2004-02-26]
